--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -7,10 +7,10 @@
     <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
     <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
     <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="{{ url_for('static', filename='/front/js/common/zlajax.js') }}"></script>
-    <script src="{{ url_for('static', filename='/front/js/common/zlparam.js') }}"></script>
-    <link rel="stylesheet" href="{{ url_for('static', filename='/front/css/front/front_base.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='/front/css/front/index.css') }}">
+    <script src="{{ url_for('static', filename='/front/js/common/bruce_ajax.js') }}"></script>
+    <script src="{{ url_for('static', filename='/front/js/common/bruce_param.js') }}"></script>
+    <link rel="stylesheet" href="{{ url_for('static', filename='/front/css/front_base.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='/front/css/index.css') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %} {% endblock %}</title>
     {% block head %}{% endblock %}
