--- a/templates/front/register.html
+++ b/templates/front/register.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block head %}
-<link rel="stylesheet" href="{{ url_for('static', filename='/front/css/front/signbase.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='/front/css/signbase.css') }}">
 <script src="{{ url_for('static', filename='/front/js/register.js') }}"></script>
 {% endblock %}
 
@@ -36,10 +36,10 @@
                     <input type="text" class="form-control" name="username" placeholder="用户名">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" name="password1" placeholder="密码">
+                    <input type="password" class="form-control" name="password" placeholder="密码">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" name="password2" placeholder="确认密码">
+                    <input type="password" class="form-control" name="repeat_password" placeholder="确认密码">
                 </div>
                 <div class="form-group">
                     <div class="input-group">
