--- a/templates/front/base.html
+++ b/templates/front/base.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="csrf-token" content="{{ csrf_token() }}">
-    <script src="http://cdn.bootcss.com/jquery/3.1.1/jquery.min.js"></script>
-    <link href="http://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
-    <script src="http://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="{{ url_for('static', filename='/jquery/jquery-3.4.1.min.js') }}"></script>
+    <link href="{{ url_for('static', filename='/bootstrap/css/bootstrap.min.css') }}" rel="stylesheet">
+    <script src="{{ url_for('static', filename='/bootstrap/js/bootstrap.min.js') }}"></script>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='/front/icon/favicon.ico') }}">
     <script src="{{ url_for('static', filename='/front/js/common/bruce_ajax.js') }}"></script>
     <script src="{{ url_for('static', filename='/front/js/common/bruce_param.js') }}"></script>
     <link rel="stylesheet" href="{{ url_for('static', filename='/front/css/front_base.css') }}">
@@ -41,17 +42,21 @@
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
+                    {% if user %}
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                            周杰伦
+                            {{ user.username }}
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                             <li><a href="#">后台管理</a></li>
-                            <li><a href="setting.html">设置</a></li>
-                            <li><a href="#">注销</a></li>
+                            <li><a href="{{ url_for('front.setting') }}">设置</a></li>
+                            <li><a href="{{ url_for('front.logout') }}">注销</a></li>
                         </ul>
                     </li>
+                    {% else %}
+                        <li><a href="{{ url_for('front.login') }}">登录</a></li>
+                    {% endif %}
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
