--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -92,15 +92,13 @@
             </div>
           </div><div class="sm-container">
             <div style="padding-bottom:10px;">
-              <a href="public_post.html" class="btn btn-warning btn-block">发布帖子</a>
+              <a href="{{ url_for('front.poster_public') }}" class="btn btn-warning btn-block">发布帖子</a>
             </div>
             <div class="list-group">
                 <a href="/" class="list-group-item active">所有板块</a>
-                  <a href="#" class="list-group-item">Python</a>
-                  <a href="#" class="list-group-item">Flask</a>
-                  <a href="#" class="list-group-item">Django</a>
-                  <a href="#" class="list-group-item">爬虫</a>
-            </div>
+                {% for border in borders %}
+                  <a href="#" class="list-group-item">{{ border.name }}</a>
+                {% endfor %}
           </div>
 {% endblock %}
 
