--- a/templates/front/index.html
+++ b/templates/front/index.html
@@ -84,7 +84,8 @@
                     {{ pagination.links }}
                 </div>
             </div>
-          </div><div class="sm-container">
+          </div>
+    <div class="sm-container">
             <div style="padding-bottom:10px;">
               <a href="{{ url_for('front.poster_public') }}" class="btn btn-warning btn-block">发布帖子</a>
             </div>
