--- a/templates/front/login.html
+++ b/templates/front/login.html
@@ -38,7 +38,7 @@
       </div>
       <div class="form-group">
         <a href="{{ url_for('front.register') }}">没有账号？立即注册</a>
-        <a href="#" class="resetpwd-link" style="float:right;">找回密码</a>
+        <a href="{{ url_for('front.password') }}" class="resetpwd-link" style="float:right;">找回密码</a>
       </div>
     </div>
   </div>
